syntax = "proto3";

package converter.v1;

option go_package = "pkg/grpc/gen;converterpb";

service ConverterService {
    rpc Convert(ConvertRequest) returns (ConvertResponse) {}
}

message ConvertRequest {
    string input_path = 1;
    string suggested_name = 2;
}

message ConvertResponse {
    string pdf_name = 1;
}